UPDATE: change license and private in package

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-management-sport",
   "version": "0.1.0",
-  "private": true,
+  "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
